Construção dos repos, models e controllers da api

--- a/src/webapi-angular.data/webapi-angular.data.csproj
+++ b/src/webapi-angular.data/webapi-angular.data.csproj
@@ -5,4 +5,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="1.1.1" />
+    <PackageReference Include="System.Linq.Expressions" Version="4.3.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\webapi-angular.model\webapi-angular.model.csproj" />
+  </ItemGroup>
 </Project>
