--- a/src/webapi-angular/appsettings.json
+++ b/src/webapi-angular/appsettings.json
@@ -6,5 +6,10 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Data": {
+    "SchedulerConnection": {
+      "ConnectionString": "Server=.\\SQLEXPRESS;Database=SchedulerDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    }
   }
 }
