Fim do tutorial, algumas correções, func parcial

--- a/src/webapi-angular/package.json
+++ b/src/webapi-angular/package.json
@@ -12,6 +12,7 @@
     "@angular/platform-server": "^2.4.5",
     "@angular/router": "^3.4.5",
     "@types/node": "^6.0.42",
+    "alertify": "^0.3.0",
     "angular2-platform-node": "~2.0.11",
     "angular2-template-loader": "^0.6.2",
     "angular2-universal": "^2.1.0-rc.1",
@@ -32,6 +33,9 @@
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
+    "lodash": "^4.17.4",
+    "ng2-bootstrap": "^1.6.1",
+    "ng2-slim-loading-bar": "^4.0.0",
     "preboot": "^4.5.2",
     "raw-loader": "^0.5.1",
     "rxjs": "^5.0.1",
