--- a/src/webapi-angular/package.json
+++ b/src/webapi-angular/package.json
@@ -11,8 +11,8 @@
     "@angular/platform-browser-dynamic": "^2.4.5",
     "@angular/platform-server": "^2.4.5",
     "@angular/router": "^3.4.5",
+    "@types/alertify": "^0.3.29",
     "@types/node": "^6.0.42",
-    "alertify": "^0.3.0",
     "angular2-platform-node": "~2.0.11",
     "angular2-template-loader": "^0.6.2",
     "angular2-universal": "^2.1.0-rc.1",
