--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^6.0.45",
     "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^3.0.4",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.9.0",
